# amfiteatr_core

./: Cargo.toml
examples/prisoner/: action.rs  main.rs  state.rs
examples/prisoner2/: agent.rs  common.rs  domain.rs  env.rs  main.rs
src/: action.rs  lib.rs  map.rs  reward.rs
src/agent/: action_pair.rs  communication_agent.rs  game_trace.rs  generic_agent.rs  identifier.rs  info_set.rs  mod.rs  policy.rs  policy_agent.rs  stateful_agent.rs  trajectory.rs
src/agent/generic/: generic_agent.rs  tracing_generic_agent.rs
src/agent/learning/: experiencing_policy.rs  game_trace.rs  mod.rs  tensor_repr.rs
src/agent/q/: mod.rs  q_function.rs  single_q_policy.rs
src/agent/tensorflow/: mod.rs
src/agent/traits/: agent_with_id.rs  automatic.rs  communication_agent.rs  id_agent.rs  internal_rewarded_agent.rs  learning_agent.rs  list_players.rs  mod.rs  model.rs  multi_episode_agent.rs  policy_agent.rs  reset_agent.rs  rewarded_agent.rs  stateful_agent.rs  tracing_agent.rs
src/automatons/: mod.rs  policy.rs
src/automatons/round_robin_model/: agent.rs  environment.rs  mod.rs  model.rs  model_builder.rs
src/comm/: endpoint.rs  mod.rs  std_channel.rs
src/demo/: mod.rs
src/domain/: construct.rs  mod.rs  reward.rs
src/domain/v1/: agent.rs  domain_parameters.rs  env.rs
src/env/: automatic.rs  builder.rs  communication_env.rs  contructed_environment.rs  domain_env.rs  environment.rs  environment_with_agents.rs  generic_environment.rs  growing_environment.rs  history.rs  mod.rs  score_environment.rs  state.rs  stateful_env.rs  trajectory.rs
src/env/automatons/: mod.rs
src/env/generic/: basic_environment.rs  basic_environment_t.rs  gen_environment.rs  mod.rs  (+5 more)
src/error/: amfi.rs  comm.rs  convert.rs  internal_error.rs  mod.rs  protocol.rs  setup.rs  sztorm.rs  tur.rs  world.rs
src/simulation/: mod.rs
src/state/: constructor.rs  mod.rs
src/world/: generic.rs  mod.rs
(+31 files in other folders)
