[package]
name = "sztorm"
version = "0.1.0"
edition = "2021"
[lib]

[[example]]
name = "prisoner2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0.38"
speedy = {version = "0.8.6", optional =true}
log = "0.4.17"
rand = "0.8.5"
itertools = "0.11.0"
serde = {version = "1.0.159", optional = true}
ron = {version = "0.8.0", optional = true}
tch = {version  = "0.13.0", optional = true}
enum-map = "2.6.0"
fern = "0.6.2"
chrono = "0.4.26"
sztorm_macros = {path = "../sztorm_macros"}

[features]

speedy = ["dep:speedy"]
serde = ["dep:serde"]
learning = ["dep:tch"]
#neuro = ["dep:tensorflow"]