[package]
name = "amfi_core"
version = "0.1.0"
edition = "2021"
[lib]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0.56"
speedy = {version = "0.8.6", optional =true}
log = "0.4.20"
rand = "0.8.5"
serde = {version = "1.0.195", features = ["derive"],  optional = true}
ron = {version = "0.8.1", optional = true}


[features]

speedy = ["dep:speedy"]
serde = ["dep:serde"]
demo = []
